compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__no_hint_for_non_method_call.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type User {\n  User(id: Int, name: String)\n}\n\nfn login(user: User) {\n  user\n}\n\npub fn main(user: User) {\n  login(user.wibble)\n}\n"
---
error: Unknown record field
   ┌─ /src/one/two.gleam:11:13
   │
11 │   login(user.wibble)
   │             ^^^^^^^ Did you mean `id`?

The value being accessed has this type:

    User

It has these fields:

    .id
    .name

