compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__no_note_about_reliable_access_if_the_accessed_type_has_a_single_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type User {\n  User(name: String)\n}\n\npub fn main() {\n  User(\"Jak\").nam\n}\n"
---
----- SOURCE CODE

pub type User {
  User(name: String)
}

pub fn main() {
  User("Jak").nam
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:7:14
  │
7 │   User("Jak").nam
  │              ^^^^ Did you mean `name`?

The value being accessed has this type:

    User

It has these accessible fields:

    .name
