compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__ok_2_args.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let Ok(1, x) = 1"
---
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let Ok(1, x) = 1
  │     ^^^^^^^^ Expected 1 argument, got 2
